# duckdb-dataviz-demo

./: .gitignore  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
evidence/: evidence.plugins.yaml  package-lock.json  package.json
evidence/pages/: index.md
rill/: duckdb_stats.db
rill/rill-project/dashboards/: model_dashboard.yaml
rill/rill-project/models/: model.sql
streamlit/: app.py  pyproject.toml
streamlit-demo/: app.py  pyproject.toml
