[tool.poetry]
name = "streamlit-demo"
version = "0.1.0"
description = ""
authors = ["mehd-io <mehdi@mehd.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = "^2.1.3"
streamlit = "^1.29.0"
matplotlib = "^3.8.2"
duckdb = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
